--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.dll
 *.so
 *.dylib
+*.h
 
 # Test binary, build with `go test -c`
 *.test
@@ -14,3 +15,5 @@ out/
 .idea/
 wins.json
 *.prof
+.vscode/settings.json
+*.csv
