--- a/data/urstartgenes.yml
+++ b/data/urstartgenes.yml
@@ -77,9 +77,13 @@ genome:
     - {id: 53,  trait_id: 0, type: INPT, activation: NullActivation}
     - {id: 54,  trait_id: 0, type: INPT, activation: NullActivation}
     - {id: 55,  trait_id: 0, type: INPT, activation: NullActivation}
+    - {id: 56,  trait_id: 0, type: INPT, activation: NullActivation}
+    - {id: 57,  trait_id: 0, type: INPT, activation: NullActivation}
     # The output nodes - actuators
-    - {id: 56,  trait_id: 0, type: OUTP, activation: SigmoidSteepenedActivation}
+    - {id: 58,  trait_id: 0, type: OUTP, activation: SigmoidSteepenedActivation}
+    - {id: 59,  trait_id: 0, type: OUTP, activation: SigmoidSteepenedActivation}
 
   # The genes - connection between neuron nodes within this genome
   genes: 
-    - {src_id: 1,  tgt_id: 56,  weight: 0.0, trait_id: 1, innov_num: 1,  mut_num: 0, recurrent: false, enabled: true}
+    - {src_id: 1,  tgt_id: 58,  weight: 0.0, trait_id: 1, innov_num: 1,  mut_num: 0, recurrent: false, enabled: true}
+    - {src_id: 1,  tgt_id: 59,  weight: 0.0, trait_id: 1, innov_num: 1,  mut_num: 0, recurrent: false, enabled: true}
